# RM_Zephyr_manifest

./: CMakeLists.txt  Kconfig  README.md  west.yml
boards/damiao/mc02/: Kconfig.damiao_mc02  board.yml  damiao_mc02.dts  damiao_mc02_defconfig  openocd.cfg
boards/dji/rm_typec/: Kconfig.rm_typec  board.yml  openocd.cfg  rm_typec.dts  rm_typec.yaml  rm_typec_defconfig
drivers/: CMakeLists.txt
drivers/buzzer/: CMakeLists.txt  Kconfig  Kconfig.MLT5202  MLT5020_pwm.c
drivers/can_rx_manager/: CMakeLists.txt  Kconfig  can_rx_manager.c
drivers/can_tx_manager/: CMakeLists.txt  Kconfig  can_tx_manager.c
drivers/motor/: CMakeLists.txt  Kconfig  Motor_DJI_can.c
dts/bindings/: vendor-prefixes.txt
dts/bindings/buzzer/: RP,pwm-buzzer.yaml  pwm-buzzer.yaml  rp,pwm-buzzer.yaml
dts/bindings/can/: rp,can-rx-manager.yaml  rp,can-tx-manager.yaml
dts/bindings/motor/: rp,can-motor.yaml  rp,dji-can-motor.yaml
include/drivers/: buzzer.h  can_rx_manager.h  can_tx_manager.h  motor.h
samples/boards/damiao_mc02/button/: prj.conf
samples/boards/damiao_mc02/button/src/: main.cpp
samples/boards/damiao_mc02/buzzer/: CMakeLists.txt  Kconfig  prj.conf
samples/boards/damiao_mc02/buzzer/include/: note_lib.h  song_lib.h
samples/boards/damiao_mc02/buzzer/src/: main.c
samples/boards/damiao_mc02/motor/: CMakeLists.txt  damiao_mc02.overlay  prj.conf
samples/boards/damiao_mc02/motor/src/: main.cpp
samples/boards/damiao_mc02/ws2812/: CMakeLists.txt  damiao_mc02.overlay  prj.conf  sample.yaml
samples/boards/rm_typec/blinky/: prj.conf
samples/boards/rm_typec/blinky_pwm/: Kconfig
samples/boards/rm_typec/buzzer/: Kconfig  prj.conf
samples/boards/rm_typec/can/: Kconfig  README.rst  prj.conf
samples/boards/rm_typec/usb/: prj.conf
submanifests/: externallib.yml
zephyr/: module.yml
(+8 files in other folders)
